--- a/views/index.ejs
+++ b/views/index.ejs
@@ -5,12 +5,58 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>LocalJolt</title>
+    <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
+    <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" type="text/css" href="/stylesheets/main.css">
+    <link href="https://fonts.googleapis.com/css?family=Lato:400,700" rel="stylesheet">
 </head>
 <body>
-    <h1>LocalJolt</h1>
-    <form action="/" method="POST">
-        <input type="text" name="location" placeholder="location">
-        <button>Submit</button>
-    </form>
+    <!-- Navbar -->
+    <nav class="navbar fixed-top navbar-dark bg-dark">
+        <div class="container-fluid">
+            <a id="brand" class="navbar-brand" href="#"><i class="fa fa-coffee"></i> LocalJolt</a>
+        </div>
+    </nav>
+
+    <div id="main-container" class="container-fluid">
+        <div class="row">
+            <div id="content-container" class="col-xl-4 col-lg-6">
+                <!-- CONTAINER FOR SEARCH FORM -->
+                <div id="search-form">
+                    <form action="/" method="POST">
+                        <div class="form-group">
+                            <label for="location" style="font-weight: bold;">Location Search</label>
+                            <input id="location" class="form-control" type="text" name="location" placeholder="Search LocalJolt">
+                        </div>
+                        <div class="form-group">
+                            <button class="btn btn-warning form-button"><i class="fa fa-coffee"></i> Submit</button>
+                        </div>
+                    </form>
+                    <!-- Use my location form -->
+                    <form action="/" method="POST">
+                        <input id="lat" type="hidden" name="lat" value="">
+                        <input id="lng" type="hidden" name="lng" value="">
+                        <button class="btn btn-warning form-button"><i class="fa fa-crosshairs"></i> Use My Location</button>
+                    </form>
+                </div >
+                <!-- Results scrollable form -->
+                <div id="result-content" class="bordered-content">
+                    <h6 style="font-weight: 700;">Results</h6>
+                    <hr>
+                    <ul></ul>
+                </div>
+            </div>
+            <!-- CONTAINER FOR MAP DISPLAY -->
+            <div id="map-container" class="col-lg-8">
+                <iframe
+                        width="100%"
+                        height="100%"
+                        frameborder="1" style="border:1px"
+                        src="https://www.google.com/maps/embed/v1/place?key=AIzaSyDOThVc6AtcxxSFEGXc1gNXmHyqnivRzKM
+                        &q=Space+Needle,Seattle+WA" allowfullscreen>
+                </iframe>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
