--- a/views/index.ejs
+++ b/views/index.ejs
@@ -24,7 +24,7 @@
                 <!-- CONTAINER FOR SEARCH FORM -->
                 <div id="search-form">
                     <!-- Custom location form -->
-                    <form action="/" method="POST">
+                    <form action="/customlocation" method="POST">
                         <div class="form-group">
                             <label for="location" style="font-weight: bold;">Location Search</label>
                             <input id="location" class="form-control" type="text" name="location" placeholder="Search LocalJolt">
@@ -34,7 +34,7 @@
                         </div>
                     </form>
                     <!-- Use my location form -->
-                    <form id = "user-loc-form" action="/" method="POST">
+                    <form id = "user-loc-form" action="/userlocation" method="POST">
                         <input id="lat" type="hidden" name="lat" value="">
                         <input id="lng" type="hidden" name="lng" value="">
                         <button class="btn btn-warning form-button"><i class="fa fa-crosshairs"></i> Use My Location</button>
