--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -28,6 +28,10 @@ body {
     white-space: nowrap;
 }
 
+.rating-star {
+    color: #ffc107;
+}
+
 #main-container {
     height: 100%;
     width: 100%;
