Clean up all code and comments to make code easier to understand

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -232,7 +232,7 @@
         }
     </script>
 
-    <!-- Include local JavaScript files -->
+    <!-- Include geolocation JavaScript file -->
     <script src="/javascript/geolocation.js"></script>
 
     <!-- Include Google Maps API script -->
