--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -2,6 +2,8 @@
 /* DATE: Apr 2, 2018 */
 /* VERSION: 1.0 */
 
+/* File contains all custom styling */
+
 html {
     height: 100%;
     width: 100%;
